# LinuxAiOS

./: .env  README.md  chat.txt  chatx.txt  check_forbidden.py  check_tests.sh  default.cgpr  filevipham.txt  final_test_verification.txt  motahoatdong.txt  opencode.json  proxy_v2.py  quytrinhsualoi.txt  test_summary.txt  test_verification.txt  thietkemoi.txt  toolchains.txt  wget-log
rust/: Cargo.toml  Modelfile  build_errors.txt  cbindgen.toml  rust_test_err.txt
rust/.cargo/: config.toml
rust/adaptive_backend/: Cargo.toml
rust/adaptive_backend/src/: lib.rs
rust/adaptive_backend/src/api/: auth.rs  mod.rs  routes.rs  state_cache.rs  websocket.rs
rust/adaptive_backend/src/assistant/: adaptive_assistant.rs  adaptive_lnn_predictor.rs  adaptive_rl_policy.rs  mod.rs
rust/adaptive_backend/src/main_component/: adaptive_degraded_mode.rs  adaptive_local_failover.rs  adaptive_main.rs  mod.rs
rust/adaptive_backend/src/supervisor/: adaptive_consensus_client.rs  adaptive_supervisor.rs  approval_manager.rs  failover_trigger.rs  mod.rs  mode_selector.rs  notification_broadcaster.rs
rust/adaptive_backend/src/support/: adaptive_support.rs  adaptive_support_context.rs  mod.rs
rust/android_module/: Cargo.toml  clippy.toml
rust/android_module/src/: lib.rs
rust/android_module/src/android_assistant/: android_gpu_backend.rs  android_lnn_predictor.rs  android_model_manager.rs  android_rl_policy.rs  mod.rs
rust/android_module/src/android_container/: android_executor_orchestrator.rs  android_lxc_executor.rs  android_manager.rs  android_monitor.rs  android_waydroid_executor.rs  mod.rs
rust/android_module/src/android_ffi/: android_lxc_bindings.rs  android_systemd_bindings.rs  mod.rs
rust/android_module/src/android_hybrid/: android_manager.rs  android_seccomp_filter.rs  mod.rs
rust/android_module/src/android_main/: android_degraded_mode.rs  android_local_failover.rs  mod.rs  (+3 more)
rust/android_module/tests/: android_anti_malware_tests.rs  android_container_manager_tests.rs  android_degraded_mode_tests.rs  android_lnn_predictor_tests.rs  android_local_failover_tests.rs  android_monitor_tests.rs  android_rl_policy_tests.rs  android_snapshot_integration_tests.rs  android_support_context_tests.rs  integration_test.rs
rust/child_tunnel/: Cargo.toml
rust/child_tunnel/src/: lib.rs
rust/child_tunnel/tests/: basic_test.rs  component_registry_tests.rs
rust/common/: Cargo.toml  build.rs
rust/common/benches/: snn_latency.rs
rust/common/src/: bindings.rs  error.rs  health_tunnel.rs  lib.rs  local_manager.rs  loom_tests.rs
rust/common/tests/: bindings_test.rs  common_integration.rs  error_tests.rs  health_test.rs  health_tunnel_tests.rs  snapshot_test.rs  supervisor_support_tests.rs  type_registry_tests.rs  utils_tests.rs
rust/database_tunnel/: Cargo.toml
rust/database_tunnel/src/: lib.rs  merkle.rs
rust/fuzz/: Cargo.toml  crash-753d7f558293c61ab217c5eeb0f20b4117f8ef09
rust/fuzz/fuzz_targets/: child_tunnel.rs  transport_tunnel.rs
rust/health_master_tunnel/: Cargo.toml
rust/health_master_tunnel/src/: consensus.rs  lib.rs  server.rs
rust/health_tunnel/: Cargo.toml
rust/health_tunnel/src/: ledger.rs  lib.rs  snapshot.rs  wrapper.rs
rust/health_tunnel/tests/: health_tunnel_tests.rs
rust/linux_module/: Cargo.toml  build.rs
rust/linux_module/src/: detector.rs  error.rs  health_tunnel_impl.rs  lib.rs  main.rs  mod.rs  zig_bindings.rs
rust/linux_module/tests/: anomaly_tests.rs  assistant_tests.rs  chaos_kill_supervisor.sh  hardware_monitor_tests.rs  health_tunnel_tests.rs  linux_cgroup_tests.rs  linux_consensus_client_tests.rs  linux_degraded_mode_tests.rs  linux_ebpf_loader_tests.rs  linux_global_ai_tests.rs  linux_gpu_monitor_tests.rs  linux_health_master_client_tests.rs  linux_lnn_predictor_tests.rs  linux_local_failover_tests.rs  linux_main_tests.rs  linux_pinned_app_manager_tests.rs  linux_policy_engine_tests.rs  linux_reputation_db_tests.rs  linux_risk_engine_tests.rs  linux_rl_policy_tests.rs  linux_snapshot_integration_tests.rs  linux_snn_processor_tests.rs  linux_support_context_tests.rs  linux_userfault_handler_tests.rs  memory_tiering_tests.rs  process_manager_tests.rs  shared_buffer_tests.rs  snapshot_manager_tests.rs  supervisor_tests.rs  support_tests.rs  tensor_pool_tests.rs  zig_bindings_iouring_tests.rs  zig_bindings_snn_ebpf_tests.rs
rust/master_tunnel/: Cargo.toml  build.rs
rust/master_tunnel/proto/: master.proto
rust/master_tunnel/src/: blockchain.rs  consensus.rs  ledger.rs  lib.rs  raft_service.rs  storage.rs  supervisor.rs  types.rs
rust/master_tunnel/tests/: blockchain_tests.rs  supervisor_tests.rs  types_tests.rs
rust/scc/: Cargo.toml  build.rs  default.cgpr
rust/scc/src/: lib.rs
rust/scc/tests/: blockchain_tests.rs  connection_tests.rs  crypto_test.rs  idl_registry_tests.rs  run_tests.sh  token_tests.rs  translation_tests.rs  transport_bridge_tests.rs  validation_tests.rs
rust/shared_buffer/: Cargo.toml
rust/shared_buffer/src/: lib.rs
rust/sih/: Cargo.toml
rust/sih/src/: bindings.rs  errors.rs  lib.rs
rust/sih/tests/: embedding_tests.rs  sih_ai_tests.rs  sih_dkss_tests.rs  sih_knowledge_tests.rs
rust/system_host/: Cargo.toml
rust/system_host/src/: lib.rs  main.rs
rust/system_host/tests/: assistant_support_monitor_tests.rs  emergency_watchdog_activator_db_tests.rs  full_integration_tests.rs  health_failover_scheduler_tests.rs  main_component_tests.rs  supervisor_integration_tests.rs
rust/transport_tunnel/: Cargo.toml  build.rs
rust/transport_tunnel/src/: lib.rs
rust/transport_tunnel/tests/: integration_test.rs
rust/windows_module/: Cargo.toml  build.rs  check_errors.txt  check_errors2.txt  check_failure.txt  current_warnings.txt  errors_3.txt  errors_4.txt  errors_5.txt  errors_6.txt  errors_7.txt  final_check.txt
rust/windows_module/src/: health_tunnel_impl.rs  lib.rs
rust/windows_module/tests/: windows_degraded_mode_tests.rs  windows_engine_tests.rs  windows_ksm_manager_tests.rs  windows_local_failover_tests.rs  windows_main_tests.rs  windows_memory_tiering_tests.rs  windows_policy_engine_tests.rs
(+1062 files in other folders)
