[package]
name = "android_module"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
child_tunnel = { path = "../child_tunnel" }
health_tunnel = { path = "../health_tunnel" }
transport_tunnel = { path = "../transport_tunnel" }
hex = "0.4"
linux_module = { path = "../linux_module" }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dashmap = "6.0"
ringbuf = "0.4.8"
crossbeam = "0.8"
crossbeam-utils = "0.8"
parking_lot = "0.12"
nix = { version = "0.29", features = ["process", "sched", "signal"] }
libc = "0.2"
sysinfo = "0.33"
libloading = "0.8"
seccompiler = "0.4"
candle-core = "0.8"
candle-nn = "0.8"
wgpu = "23"
rand = "0.8"
sha2 = "0.10"
bitflags = { version = "2.6", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
zstd = "0.13"
tracing = "0.1"
[lints.rust]
unused = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
or_fun_call = "deny"
disallowed_types = "deny"