[package]
name = "child_tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
# Sử dụng rusqlite từ workspace
rusqlite = { workspace = true }
shared_buffer = { path = "../shared_buffer" }
dashmap = { workspace = true }
scc = { path = "../scc" }
# Các module nội bộ
common = { path = "../common" }

# Dependency hỗ trợ runtime và serialization
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1.0"
bincode = "1.3"
sha2 = "0.10"
