[package]
name = "common"
version.workspace = true
edition.workspace = true

[build-dependencies]
cbindgen = "0.29"

[dependencies]
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = "0.12"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
rand = { workspace = true }
dashmap = { workspace = true }
ringbuf = "0.4.8"
crossbeam-utils = "0.8"
evmap = "11.0"
rusqlite = { workspace = true }
bitflags = "2.6"
bincode = "1.3"
aes = "0.8"
ctr = "0.9"

[dev-dependencies]
loom = { workspace = true }
criterion = { workspace = true }
tempfile = "3.10"

[features]
default = []
benchmark = []
