[package]
name = "database_tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
rusqlite = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
parking_lot = "0.12"
anyhow = "1.0"
tracing = "0.1"
crossbeam = "0.8"
dashmap = { workspace = true }
bincode = "1.3"
