[package]
name = "aios-fuzz"
version.workspace = true
edition.workspace = true
publish = false
autotests = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "transport_tunnel"
path = "fuzz_targets/transport_tunnel.rs"
test = false
bench = false
doc = false

[[bin]]
name = "child_tunnel"
path = "fuzz_targets/child_tunnel.rs"
test = false
bench = false
doc = false

[dependencies]
libfuzzer-sys = { workspace = true }

[dependencies.transport_tunnel]
path = "../transport_tunnel"
default-features = false

[dependencies.child_tunnel]
path = "../child_tunnel"
default-features = false

[dependencies.common]
path = "../common"
default-features = false
