[package]
name = "health_master_tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
rusqlite = { workspace = true }
tracing = "0.1"
thiserror = "1.0"
bincode = "1.3"
sha2 = "0.10"
