[package]
name = "health_tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
anyhow = "1.0"
tracing = "0.1"
thiserror = "1.0"
dashmap = "6.0"