[package]
name = "linux_module"
version.workspace = true
edition.workspace = true
autotests = true

[dependencies]
# Local modules - Hệ thống Tunnel và Core
common = { path = "../common" }
health_tunnel = { path = "../health_tunnel" }
health_master_tunnel = { path = "../health_master_tunnel" }
transport_tunnel = { path = "../transport_tunnel" }
scc = { path = "../scc" }
master_tunnel = { path = "../master_tunnel" }
child_tunnel = { path = "../child_tunnel" }

# Database & Storage
rusqlite = { workspace = true }
lru = "0.12"
zstd = "0.13"
tar = "0.4"
walkdir = "2"
dashmap = "6.0"
shared_buffer = { path = "../shared_buffer" }
tempfile = "3"

# System & Low-level (Linux specific)
nix = { version = "0.27", features = ["fs", "user", "process", "mman"] }
libc = "0.2"
memmap2 = "0.9"
memfd = "0.6"
userfaultfd = "0.6"
sysinfo = "0.29"
libloading = "0.8"
lazy_static = "1.5"

# GPU Monitoring
nvml-wrapper = "0.10"

# Async & Concurrency
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
crossbeam = "0.8"
crossbeam-utils = "0.8"
ringbuf = "0.4.8"
tonic = "0.11"

# Serialization & Security
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# AI & Math
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
half = { workspace = true }

[features]
default = ["ai", "nvml"]
ai = []
nvml = []
wgpu = []

[build-dependencies]
bindgen = "0.69"

[[bin]]
name = "linux_module_demo"
path = "src/main.rs"
[lints.rust]
unused = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
or_fun_call = "deny"
disallowed_types = "deny"