[package]
name = "master_tunnel"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "io-util"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
openraft = { version = "=0.8.8", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.0"
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tonic = "0.11"
prost = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
bincode = "1.3"
futures = "0.3"
[build-dependencies]
tonic-build = "0.11"
