[package]
name = "scc"
version.workspace = true
edition.workspace = true
[[test]]
name = "crypto_test"
path = "tests/crypto_test.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[dependencies]
common = { path = "../common" }
crossbeam = "0.8"
memmap2 = "0.9"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
rand = { workspace = true }
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3"
dashmap = { workspace = true }

[build-dependencies]
bindgen = "0.69"
