[package]
name = "scc"
version.workspace = true
edition.workspace = true

[[test]]
name = "crypto_test"
path = "tests/crypto_test.rs"

[dependencies]
common = { path = "../common" }
crossbeam = "0.8"
memmap2 = "0.9"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
rand = { workspace = true }
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3"
dashmap = { workspace = true }
aes-gcm = { version = "0.10", features = ["aes"] }
generic-array = "0.14"
sha2 = { workspace = true }
bincode = "1.3"

[build-dependencies]
bindgen = "0.69"

[dev-dependencies]
once_cell = "1.19"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
unused = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
or_fun_call = "deny"
disallowed_types = "deny"