[package]
name = "sih"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
parking_lot = "0.12"
hex = "0.4"
rusqlite = { workspace = true }
sha2 = "0.10"
# các dependency khác nếu cần (faiss, hnsw, ort, ...) có thể thêm sau
