[package]
name = "system_host"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tonic = "0.11"  # thêm tonic để dùng gRPC

[[bin]]
name = "system_host"
path = "src/main.rs"