[package]
name = "system_host"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
scc = { path = "../scc" }
child_tunnel = { path = "../child_tunnel" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tonic = "0.11"
dashmap = "6.0"
crossbeam = "0.8"
hmac = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
thiserror = "1.0"
nix = "0.28"
libc = "0.2"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "system_host"
path = "src/bin/main.rs"
[lints.rust]
unused = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
or_fun_call = "deny"
disallowed_types = "deny"